log
srcs/Config.cpp:22:29: error: use of undeclared identifier 'skip_comment'
        std::string file_content = skip_comment(readFile(file));
                                   ^
srcs/Config.cpp:27:5: error: use of undeclared identifier 'count_char'
        if(count_char('{', file_content) != count_char('}', file_content))
           ^
srcs/Config.cpp:27:38: error: use of undeclared identifier 'count_char'
        if(count_char('{', file_content) != count_char('}', file_content))
                                            ^
srcs/Config.cpp:33:3: error: use of undeclared identifier 'log_serv_config'
                log_serv_config(serveur);
                ^
srcs/Config.cpp:40:22: error: implicit instantiation of undefined template 'std::__1::vector<unsigned long, std::__1::allocator<unsigned long> >'
        std::vector<size_t> pos(2, starting_pos);
                            ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/iosfwd:217:28: note: template is declared here
class _LIBCPP_TEMPLATE_VIS vector;
                           ^
srcs/Config.cpp:60:9: error: use of undeclared identifier 'is_number'
                if (!(is_number(element.front()) && (ret_serv->port = std::stoi(element.front())) >=0))
                      ^
srcs/Config.cpp:91:9: error: use of undeclared identifier 'is_number'
                if (!(is_number(element.front()) && (tmp_err = std::stoi(element.front())) >=0))
                      ^
srcs/Config.cpp:137:42: error: use of undeclared identifier 'skip_whitespaces'
                std::string line = server_scope.substr(skip_whitespaces(server_scope), server_scope.find(";") - skip_whitespaces(server_scope));
                                                       ^
srcs/Config.cpp:137:99: error: use of undeclared identifier 'skip_whitespaces'
                std::string line = server_scope.substr(skip_whitespaces(server_scope), server_scope.find(";") - skip_whitespaces(server_scope));
                                                                                                                ^
srcs/Config.cpp:138:36: error: use of undeclared identifier 'split_string'
                std::list<std::string> element = split_string(line, " ");
                                                 ^
srcs/Config.cpp:158:30: error: use of undeclared identifier 'skip_whitespaces'
        start_name = location_len + skip_whitespaces(&element[location_len]);
                                    ^
srcs/Config.cpp:163:35: error: use of undeclared identifier 'skip_whitespaces'
                element = location_scope.substr(skip_whitespaces(location_scope), location_scope.find(";") - skip_whitespaces(location_scope));
                                                ^
srcs/Config.cpp:163:96: error: use of undeclared identifier 'skip_whitespaces'
                element = location_scope.substr(skip_whitespaces(location_scope), location_scope.find(";") - skip_whitespaces(location_scope));
                                                                                                             ^
srcs/Config.cpp:164:37: error: use of undeclared identifier 'split_string'
                std::list<std::string> tmp_list = split_string(element, " ");
                                                  ^
14 errors generated.
make: *** [bin/Config.o] Error 1
